# context-keeper

./: AGENTS.md  CLAUDE.md  CONTEXT.md  EmailSys-Meeting-Template.md  README.md  config.example.yaml  main.py  pyproject.toml
src/context_keeper/: __init__.py  cli.py  config.py  diff.py  generate.py  markless.py  scan.py  sync.py  tui.py
tests/: test_config.py  test_diff.py  test_markless.py  test_scan.py  test_sync.py
